Remove bulma links

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             Directory
             </a>
                     <div class="navbar-dropdown ">
-                        <a class="navbar-item " href="/documentation/overview/start/">
+                        <a class="navbar-item " href="#">
                 Overview
             </a>
-                        <a class="navbar-item " href="http://bulma.io/documentation/modifiers/syntax/">
+                        <a class="navbar-item " href="#">
                 Facilities
             </a>
-                        <a class="navbar-item " href="http://bulma.io/documentation/grid/columns/">
+                        <a class="navbar-item " href="#">
                 Agencies
             </a>
                     </div>
