Change home page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div id="navMenuExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item " href="http://bulma.io/">
+                <a class="navbar-item " href="http://10.146.99.29/">
             Home
         </a>
                 <div class="navbar-item has-dropdown is-hoverable">
