Change logo link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- The Good Stuff -->
     <nav class="navbar">
         <div class="navbar-brand">
-            <a class="navbar-item" href="http://bulma.io">
+            <a class="navbar-item" href="http://10.146.99.29/">
                 <span class="brand-text">EUCLID</span>
              </a>
         </div>
