Fullscreen on dash only

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     allowtransparency></iframe>
                             </div>
                             <div>
-                                <iframe class="iframe-class" src="http://10.146.99.29:3000/public/dashboard/cdf47270-c7b4-433b-9fa3-158d61911fb3" frameborder="0"
+                                <iframe class="iframe-class" src="http://10.146.99.29:3000/public/dashboard/3b4a2dd7-32c1-484c-bcd2-b64a99d1e42a" frameborder="0"
                                     allowtransparency></iframe>
                             </div>
                             <div>
@@ -133,7 +133,7 @@
                                         <span class="tag is-info is-medium">At Risk</span>
                                     </div>
                                     <div class="has-text-centered">
-                                        <span class="tag is-info is-medium">Richwood</span>
+                                        <span class="tag is-info is-medium">Leaders</span>
                                     </div>
                                     <div class="has-text-centered">
                                         <span class="tag is-info is-medium">Heat Map</span>
